css/global.css
/* ... */
nav .selected:not([role="button"])::before {
	color: var(--selected);
}
nav :is(.selected, a:hover)::before {
	transform: translate(-50%) scaleY(1);
}
a:active:not(.button) {
	transform: translateY(1px);
}
nav a[role="button"]::after {
	content: "▼";
	font-size: 85%;
	right: -3px;
	bottom: 0;
}
header.active nav a[role="button"]::after {
	transform: rotate(180deg);
}
header > .menu {
	top: 100%;
	z-index: -9;
	width: 680px;
	height: 300px;
	padding: 1.5em;
	font-size: 90%;
	transform: scaleX(.7);
	border-radius: 0 0 20px 20px;
}
header.active > .menu {
	transform: scaleX(1);
}
header > .menu h3 {
	margin-top: 1em;
	margin-bottom: 0;
}
footer .link,
.message {
	width: min(100%, 900px);
}
footer .link {
	padding: 0 2em;
	gap: 2em;
}
footer,
blockquote,
form[method="dialog"] button,
.pad-1 {
	padding: 1em;
}
footer {
	color: var(--footer-text);
	padding-bottom: calc(1em + 50px);
}
footer::after {
	text-shadow: -1px -1px 3px #FFFFFF30, 1px 1px 3px #00000030;
	content: var(--build-ver);
	justify-content: flex-end;
	color: transparent;
	height: 50px;
	bottom: 0;
	left: 0;
}
footer .hr {
	margin: 1em auto;
	background: var(--footer-text);
	width: min(100%, 300px);
	height: .015rem;
}
footer ul,
ul.clear,
ul.transparent,
header > .menu ul {
	list-style: none;
}
footer ul,
header > .menu ul,
ul.clear {
	padding-inline-start: 0;
}
:is(header > .menu, footer) a {
	font-size: 90%;
	color: var(--footer-link);
}
:is(footer :is(a[target="_blank"], #copyBtn))::before {
	margin-right: 0.5ch;
}
footer a[target="_blank"]:not(.issue)::before {
	content: "\f0ac";
}
:is(header > .menu, footer) a:hover {
	color: var(--footer-link-hover);
}
footer span {
	font-size: 82%;
}
blockquote:is(:not(:target), :target) {
	border-left: 4px solid var(--selected);
}
blockquote,
noscript div,
.warning,
.tags > * {
	border-radius: 20px;
}
dialog,
.card {
	border-radius: 30px;
}
dialog::backdrop {
	background: #00000099;
}
.mod-img dialog {
	border: none;
	cursor: zoom-out;
}
form[method="dialog"] button {
	border-radius: 0 50%;
	width: 40px;
	right: 0;
	background: #FE0000;
	border: none;
}
.mod-img img,
:is(body:not(.loaded), a.button, footer)::after,
.wid-full,
.scrollbar #progress,
.ovl,
.bg,
.to-home,
#parallax,
#fixed {
	width: 100%;
}
:is(body:not(.loaded), a.button, blockquote)::after,
.scrollbar,
.hei-full,
.card .ovl,
.vl,
.ovl,
.bg,
#parallax,
#fixed {
	height: 100%;
}
body,
.mar-0,
nav a p {
	margin: 0;
}
.highlighted {
	background: var(--selected);
	color: var(--inside-primary);
	padding: .2em .5em;
}
.sign {
	margin-top: 1.25em;
}
.fnt-sz-sub {
	font-size: 80% !important;
}
.sqr,
.nav-hid,
form[method="dialog"] button,
[avt],
#themes,
#closeHeaderMenu {
	width: var(--size);
	height: var(--size);
	aspect-ratio: 1 / 1;
}
footer span,
a.button,
.txt-ctr,
.tooltip,
.to-home,
noscript article {
	text-align: center;
}
.txt-rht {
	text-align: right;
}
.re-txt {
	text-align: left;
}
footer .link,
blockquote,
.ctr,
.to-home,
.sub,
.projects-list {
	margin: 0 auto;
}
.pad-0,
.mod-img dialog {
	padding: 0;
}
h1,
h2,
h3,
thead,
.head-font,
[step],
.highlighted {
	font-family: var(--header-font);
}
header > *,
form[method="dialog"] button,
nav :is(.selected, a)::before,
:is(footer, a.button, .tooltip, nav a[role="button"])::after,
.abs,
.tooltip,
.settings,
.ovl,
.bg,
.scrollbar .cursor,
#parallax,
#fixed,
#closeHeaderMenu {
	position: absolute;
}
header,
#closeHeaderMenu {
	left: 50%;
	transform: translate(-50%);
}
#closeHeaderMenu:active {
	transform: translate(-50%) scale(.98);
}
nav :is(.selected, a),
a[role="button"],
a.button,
footer,
blockquote,
.scrollbar #progress,
.sub,
.rel,
.header,
.card,
.message {
	position: relative;
}
.fix,
body:not(.loaded)::after, 
noscript article,
dialog,
header,
.scrollbar {
	position: fixed;
}
.ovl {
	left: 0;
	background: var(--theme-ovl);
}
.block,
.vl {
	display: block;
}
.inline {
	display: inline;
}
.inline-block,
a {
	display: inline-block;
}
nav .selected,
nav a,
noscript article,
.header,
.projects-list,
.projects-list section,
.blog,
.grid,
.nav-hid,
.card,
.card .ovl,
[step] {
	display: grid;
}
nav .selected,
nav a,
noscript article,
.header,
.grid.mid
.nav-hid,
[step] {
	place-content: center;
}
.card,
.card .ovl {
	place-items: center;
}
main .dif > *:nth-child(odd) {
	background: var(--even-child);
}
header,
nav,
footer,
footer::after,
footer .link,
.flex,
.tags,
.menu,
.settings {
	display: flex;
}
.tags,
.com-gap {
	gap: 1em;
}
header,
footer,
.tags,
.jus-ctr {
	justify-content: center;
}
.jus-aru {
	justify-content: space-around;
}
footer .link,
.jus-gap {
	justify-content: space-between;
}
.jus-even {
	justify-content: space-evenly;
}
footer::after,
.ali-i-ctr,
.settings,
.settings *,
.projects-list * {
	align-items: center;
}
.flex.row,
.tags > *,
header > .menu {
	flex-direction: row;
}
.flex.row.rev {
	flex-direction: row-reverse;
}
footer,
.settings,
.flex.column {
	flex-direction: column;
}
header > .menu,
.nowrap {
	flex-wrap: nowrap;
	white-space: nowrap;
}
.tags,
.wrap,
footer .link {
	flex-wrap: wrap;
}
.mar-ctr {
	margin: 0 auto;
}
blockquote,
a.button,
.tags > *,
.c-i-secondary,
.bg-secondary,
.bg-darker-secondary,
nav a[role="button"]::after,
nav a::before {
	color: var(--inside-secondary);
}
.cl-fff,
noscript blockquote,
form[method="dialog"] button,
#closeHeaderMenu {
	color: #FFF;
}
.no-bg,
.settings #extend,
.settings .menu button {
	background: none;
}
.mod-img dialog,
.bg-none {
	background: transparent;
}
body,
.bg-primary {
	background: var(--primary);
}
header,
footer,
blockquote:not(noscript article blockquote),
nav :is(.selected, a)::before,
.bg-secondary,
.tags > *,
[step],
.settings,
.blog aside,
::-webkit-scrollbar-corner {
	background: var(--secondary);
}
footer::after,
header > .menu,
blockquote [step],
.bg-darker-secondary,
.to-home {
	background: var(--darker-secondary);
}
.bg-lighter,
.blog article {
	background: #FFFFFF45;
}
.bg-dif {
	background: var(--even-child);
}
.header,
.cov-bg {
	background-size: cover;
}
/* ... */

